--- a/src/css/style.css
+++ b/src/css/style.css
@@ -199,7 +199,7 @@ header {
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.337);
   /* Text alignment */
   text-align: left;
   overflow-wrap: break-word; /* Prevent text overflow */
@@ -291,7 +291,7 @@ header {
   min-width: 250px; /* Prevent articles from becoming too small */
   padding: 1.5rem;
   border-radius: 1.5rem;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.337);
   display: flex;
   flex-direction: column; /* Stack content vertically */
   justify-content: space-between;
