--- a/src/scss/components/_articles.scss
+++ b/src/scss/components/_articles.scss
@@ -13,7 +13,7 @@
     padding: 1.5rem;
     
     border-radius: 1.5rem;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.337);
     display: flex;
     flex-direction: column; /* Stack content vertically */
     justify-content: space-between;
