--- a/src/scss/components/_information.scss
+++ b/src/scss/components/_information.scss
@@ -34,7 +34,7 @@
       flex-direction: column;
       justify-content: center;
       gap: 1rem;
-      background-color: white;
+      background-color: rgba(255, 255, 255, 0.337);
       /* Text alignment */
       text-align: left;
       overflow-wrap: break-word; /* Prevent text overflow */
