--- a/src/scss/components/_information.scss
+++ b/src/scss/components/_information.scss
@@ -114,3 +114,28 @@
     }
   }
   
+
+  .info-content{
+    h1{
+      font-size: 180%;
+    }
+    width: 100%; /* Responsive width */
+    height: auto; /* Adjust height */
+    border-radius: 1.5rem;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    background-color: rgba(255, 255, 255, 0.337);
+    /* Text alignment */
+    text-align: center;
+    overflow-wrap: break-word; /* Prevent text overflow */
+    word-wrap: break-word;
+
+    /* Media query for smaller screens */
+    @media (max-width: 768px) {
+      font-size: 150%;
+      text-align: center; /* Center align for smaller screens */
+    }
+  }
